# KIV-CPP

./: .gitignore  CMakeLists.txt  README.md  justfile
cviceni/: justfile
cviceni/cv01/: main.cpp
cviceni/cv02/: main.cpp
cviceni/cv03/: vector2.hpp
cviceni/cv04/: CMakeLists.txt  analyzer.cpp  analyzer.h  main.cpp
cviceni/cv06/: main.cpp
cviceni/cv07/: main.cpp
cviceni/cv08/: main.cpp
cviceni/cv10/: FileFinder.cpp  FileFinder.hpp  main.cpp
cviceni/cv11/: analyzer.cpp  analyzer.h  cv11.diff  drawing.cpp  drawing.h  generator.cpp  generator.h  main.cpp  notes.md  shared.h
cviceni/cv12/: main.cpp
inputs/: complex.in  sample.in
semestralky/sem01/: .gitignore  CMakeLists.txt  README.md  justfile
semestralky/sem01/src/: config.cpp  config.hpp  main.cpp  scene.cpp  scene.hpp  vector.cpp  vector.hpp
semestralky/sem01/src/operations/: operation.hpp  rotate.cpp  rotate.hpp  scale.cpp  scale.hpp  translate.cpp  translate.hpp
semestralky/sem01/src/shapes/: circle.cpp  circle.hpp  line.cpp  line.hpp  rect.cpp  rect.hpp  shape.hpp
semestralky/sem01/src/writers/: pgm.cpp  pgm.hpp  svg.cpp  svg.hpp  writer.hpp
semestralky/sem02/: CMakeLists.txt  README.md  justfile
src/: config.cpp  config.hpp  defs.hpp  factory.hpp  main.cpp  scene.cpp  scene.hpp  vector.cpp  vector.hpp
src/operations/: operation.hpp  rotate.cpp  rotate.hpp  scale.cpp  scale.hpp  translate.cpp  translate.hpp
src/shapes/: circle.cpp  circle.hpp  line.cpp  line.hpp  rect.cpp  rect.hpp  shape.hpp
src/writers/: pgm.cpp  pgm.hpp  svg.cpp  svg.hpp  writer.hpp
test/: sample.in
(+3 files in other folders)
